# driftwatch

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ci-workflow.yml  pypi-publish-workflow.yml  render_figures.py
docs/superpowers/specs/: 2026-06-20-driftwatch-design.md
examples/: benchmark-results.json  benchmark.py  benchmark.sh  demo-output.txt  demo.py  demo.sh
examples/scenarios/: density.json  density.py  engine_pairs.json  engine_pairs.py  key_types.json  key_types.py  lag_recheck.json  lag_recheck.py  tuning_edges_fuzz.json  tuning_edges_fuzz.py  types_cross_engine.json  types_cross_engine.py
src/driftwatch/: __init__.py  __main__.py  cli.py  config.py  connector.py  engine.py  hashing.py  models.py  reporter.py
src/driftwatch/connectors/: __init__.py  duckdb.py  memory.py  postgres.py  snowflake.py
tests/: test_duckdb_connector.py  test_e2e.py  test_engine.py  test_foundation.py  test_postgres_connector.py  test_reporter.py  test_snowflake_connector.py
